@@ -1,5 +1,6 @@
 Changes for 1.8.2
 
+ - [ZBX-1878] reverted map label background drawing (Aly)
  - [ZBX-2059] fixed special char treatment in XML export (Aly)
  - [ZBX-1655] improved error message on map save with circular reference (Aly)
  - [ZBX-1823] improved map element labels expansion in map editing screen (Aly)
